<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanodegree.popularmovies.Activity.MovieDetailActivity">

    <RelativeLayout
        android:id="@+id/rl_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:id="@+id/ll_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_movie_poster"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/release_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/rating"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="5dp"
                android:text="@string/mark_favourite"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_movie_detail"
            android:text="@string/plot_synopsis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_overview_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_overview" />

        <TextView
            android:id="@+id/tv_trailor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_overview_text"
            android:layout_marginTop="10dp"
            android:text="@string/trailors"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_trailor_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_trailor_title"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_progress_tailor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_trailor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/progress_trailor"
                    android:text="@string/loading_trailors" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_trailor_list"
            android:layout_marginTop="10dp"
            android:text="@string/reviews"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_review_title"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_progress_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/progress_review"
                    android:text="@string/loading_reviews" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>